Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,50 +1,63 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Websites : ">
+    <title>Websites by philpeace</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Websites</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Websites</h1>
+        <p></p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/philpeace">View on GitHub</a>
 
-          <h1 id="project_title">Websites</h1>
-          <h2 id="project_tagline"></h2>
+        <p class="view"><a href="https://github.com/philpeace">View My GitHub Profile</a></p>
 
-        </header>
-    </div>
+      </header>
+      <section>
+        <h1>
+<a id="esta-1" class="anchor" href="#esta-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ESTA 1</h1>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <p>Good Esta
-Bad Esta
-<a href="http://www.nationalmillsweekend.co.uk/windmills.htm">http://www.nationalmillsweekend.co.uk/windmills.htm</a></p>
+<p>Good Esta</p>
 
-<p>Havering adult college
-Ling cars
-BBC</p>
+<h1>
+<a id="esta-2" class="anchor" href="#esta-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ESTA 2</h1>
+
+<p><a href="https://www.usavisaonline.com/esta.html">https://www.usavisaonline.com/esta.html</a></p>
+
+<h1>
+<a id="windmills" class="anchor" href="#windmills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Windmills</h1>
+
+<p><a href="http://www.nationalmillsweekend.co.uk/windmills.htm">http://www.nationalmillsweekend.co.uk/windmills.htm</a></p>
+
+<h1>
+<a id="havering-adult-college" class="anchor" href="#havering-adult-college" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Havering adult college</h1>
+
+<p><a href="http://www.haveringadultcollege.co.uk/">http://www.haveringadultcollege.co.uk/</a></p>
+
+<h1>
+<a id="lings-cars" class="anchor" href="#lings-cars" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lings Cars</h1>
+
+<p><a href="http://www.lingscars.com/">http://www.lingscars.com/</a></p>
+
+<h1>
+<a id="bbc" class="anchor" href="#bbc" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>BBC</h1>
+
+<p><a href="http://www.bbc.co.uk">http://www.bbc.co.uk</a></p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
