--- a/index.html
+++ b/index.html
@@ -16,42 +16,26 @@
     <div class="wrapper">
       <header>
         <h1>Websites</h1>
-        <p></p>
-
-
-        <p class="view"><a href="https://github.com/philpeace">View My GitHub Profile</a></p>
-
       </header>
       <section>
-        <h1>
-<a id="esta-1" class="anchor" href="#esta-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ESTA 1</h1>
+        <h2>ESTA 1</h2>
+        <p>Good Esta</p>
 
-<p>Good Esta</p>
+        <h2>ESTA 2</h2>
+        <p><a href="https://www.usavisaonline.com/esta.html" target="_blank">https://www.usavisaonline.com/esta.html</a></p>
 
-<h1>
-<a id="esta-2" class="anchor" href="#esta-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ESTA 2</h1>
+        <h2>Windmills</h2>
+        <p><a href="http://www.nationalmillsweekend.co.uk/windmills.htm" target="_blank">http://www.nationalmillsweekend.co.uk/windmills.htm</a></p>
 
-<p><a href="https://www.usavisaonline.com/esta.html">https://www.usavisaonline.com/esta.html</a></p>
+        <h2>Havering adult college</h2>
+        <p><a href="http://www.haveringadultcollege.co.uk/" target="_blank">http://www.haveringadultcollege.co.uk/</a></p>
 
-<h1>
-<a id="windmills" class="anchor" href="#windmills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Windmills</h1>
+        <h2>Lings Cars</h2>
+        <p><a href="http://www.lingscars.com/" target="_blank">http://www.lingscars.com/</a></p>
 
-<p><a href="http://www.nationalmillsweekend.co.uk/windmills.htm">http://www.nationalmillsweekend.co.uk/windmills.htm</a></p>
-
-<h1>
-<a id="havering-adult-college" class="anchor" href="#havering-adult-college" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Havering adult college</h1>
-
-<p><a href="http://www.haveringadultcollege.co.uk/">http://www.haveringadultcollege.co.uk/</a></p>
-
-<h1>
-<a id="lings-cars" class="anchor" href="#lings-cars" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lings Cars</h1>
-
-<p><a href="http://www.lingscars.com/">http://www.lingscars.com/</a></p>
-
-<h1>
-<a id="bbc" class="anchor" href="#bbc" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>BBC</h1>
-
-<p><a href="http://www.bbc.co.uk">http://www.bbc.co.uk</a></p>
+        <h2>BBC</h2>
+        <p><a href="http://www.bbc.co.uk" target="_blank">http://www.bbc.co.uk</a></p>
+      
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
