Update esta link to _blank

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </header>
       <section>
         <h2>ESTA 1</h2>
-        <p><a href="esta.html">ESTA</a></p>
+        <p><a href="esta.html" target="_blank">ESTA</a></p>
 
         <h2>ESTA 2</h2>
         <p><a href="https://www.usavisaonline.com/esta.html" target="_blank">https://www.usavisaonline.com/esta.html</a></p>
